# grade-project

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  build.sh  main.py  pyproject.toml  requirements.txt  setup.py
bindings/: pybind_module.cpp
cpp/: lbm_shan_chen.cpp  lbm_shan_chen.h
cpp/include/: lbm_shan_chen.h
cpp/src/: lbm_shan_chen.cpp
docs/: IMPLEMENTATION.md  QUICKSTART.md
python/: simulate.py
scenarios/: a_equilibrium.py  b_evaporation.py  c_coexistence_curve.py  d_laplace_pressure.py  e_eos_comparison.py  f_parameter_study.py
src/lbm/: __init__.py  core.py  metrics.py  runner.py  visualization.py
src/lbm/export/: __init__.py  blender_import.py  obj.py
tests/: test_metrics.py  test_physics.py
